2006-12-18  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* array.c, cimXmlGen.c, cimXmlRequest.c, objectImpl.c, objectpath.c: 

	Fixed 1618216: corrected handling of references in arrays, null
	argument handling and formatting of resultvalues.
	
2006-12-14  Sven Schuetz
	* cimslpCMPI.c, cimslp.h, trace.h, trace.c, cimslp.c, Makefile.am, 
	cimslpCMPI.h, cimslpUtil.h, cimslpSLP.h, cimslpSLP.c:
	Fixed 1615731: slp enhancements (shutdown, tracing)

2006-12-14  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-70.boeblingen.de.ibm.com>

	* cimXmlOps.y, cimXmlGen.c: 
	Fixed 1615776: parsing of PARAMVALUE xml (empty ones and arrays).

	* cimXmlGen.c: 
	Fixed 1613172: generation of PARAMVALUE xml for references
	and arrays.
	
2006-12-13  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* internalProvider.c: 
	Fixed 1529134: internal provider associator operations
	
2006-12-12  Sven Schuetz

	* cimslpCMPI.c:
	Fixed 1614075: enabling slp can lead to a segfault

	* internalProvider.c, brokerEnc.c:
	Fixed 1613936: associator call fails when role parameters are set

	* cimXmlGen.c, objectImpl.c:
	Fixed 1613933: embedded Objects in Indications do not work

2006-12-12  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* array.c, providerMgr.c: 
	Fixed 1613925: use of non-tracked array operations allows
	to release the array of provider-infos properly.

2006-12-06  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* Makefile.am, libsfcUtil.Versions:
	Fixed 1610514: aligned sfcc/sfcb libsfcUtil

2006-12-05  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* instance.c: 
	Fixed 1609711: segfault during default property population of
	instances of undefined class.

2006-12-03  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* instance.c: 
	Postfix for 1605216: removed memory leak.

2006-11-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* classProvider.c, classProviderGz.c, classProviderMem.c: 