@@ -1,3 +1,7 @@
+2006-12-18  Sven Schuetz
+	* cimslpCMPI.c, cimslp.c, cimslpCMPI.h, cimslpSLP.c, 
+	Fixed 1618258: slp problems when ssl is enabled
+
 2006-12-18  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
 
 	* array.c, cimXmlGen.c, cimXmlRequest.c, objectImpl.c, objectpath.c: 
